src/test/ui/error-codes/E0565-1.stderr
error[E0565]: unsupported literal
  --> $DIR/E0565-1.rs:14:14
   |
14 | #[deprecated("since")] //~ ERROR E0565
   |              ^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0565"
